# QtUnblockNeteaseMusic

./: .gitignore  .gitmodules  CMakeLists.txt  QtUnblockNeteaseMusic.pro  README.md  README_en.md  config.cpp  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  update.json
locale/: QtUnblockNeteaseMusic_zh_CN.ts  qt_zh_CN.ts
res/: QtUnblockNeteaseMusic.rc
src/: cawizard.cpp  cawizard.h  cawizardpages.cpp  cawizardpages.h  config.cpp  config.h  configdialog.cpp  configdialog.h  configdialog.ui  envdialog.cpp  envdialog.h  envdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h  tray.cpp  tray.h  updatechecker.cpp  updatechecker.h  version.h.in  wizardpages.cpp  wizardpages.h
src/config/: config.cpp  config.h  param.h
src/utils/: winutils.cpp  winutils.h
utils/: winutils.cpp  winutils.h
